Regression: Blender Crashes When snap roll a bone in armature #101040

Closed
opened 2022-09-13 18:19:43 +07:00 by Marcelievsky · 9 comments

System Information
Operating system: Windows 10 Pro
Graphics card: Nvidia Geforce 3060 RTX

Blender Version
Broken: 3.3.0
Worked: 3.2.2

Caused by 011327224e

Blender crashes when I attempt to roll a bone armature (in edit mode) and pressing Ctrl + R and Ctrl (to activate snap)

1- try to rotate any bone of the attached armature
2- it crashes instantly

tamaki BUG.blend

**System Information** Operating system: Windows 10 Pro Graphics card: Nvidia Geforce 3060 RTX **Blender Version** Broken: 3.3.0 Worked: 3.2.2 Caused by 011327224e Blender crashes when I attempt to roll a bone armature (in edit mode) and pressing Ctrl + R and Ctrl (to activate snap) 1- try to rotate any bone of the attached armature 2- it crashes instantly [tamaki BUG.blend](https://archive.blender.org/developer/F13488773/tamaki_BUG.blend)

Added subscriber: @MarcelievskyRomanenko

Added subscriber: @MarcelievskyRomanenko

Added subscribers: @mano-wii, @iss

Added subscribers: @mano-wii, @iss

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Can confirm, crashed on NULL dereference - td->loc in applyFaceNearest().

>	blender.exe!copy_v3_v3(float * r, const float * a) Řádek 44	C

 	blender.exe!applyFaceNearest(TransInfo * t, TransDataContainer * tc, TransData * td) Řádek 445	C
 	blender.exe!applySnappingIndividual(TransInfo * t) Řádek 514	C
 	blender.exe!recalcData_edit_armature(TransInfo * t) Řádek 1198	C
 	blender.exe!recalcData(TransInfo * t) Řádek 1395	C
 	blender.exe!applyBoneRoll(TransInfo * t, const int * UNUSED_mval) Řádek 72	C
 	blender.exe!transformApply(bContext * C, TransInfo * t) Řádek 1992	C
 	blender.exe!transform_modal(bContext * C, wmOperator * op, const wmEvent * event) Řádek 434	C
 	blender.exe!wm_handler_operator_call(bContext * C, ListBase * handlers, wmEventHandler * handler_base, wmEvent * event, PointerRNA * properties, const char * kmi_idname) Řádek 2372	C++
 	blender.exe!wm_handlers_do_intern(bContext * C, wmWindow * win, wmEvent * event, ListBase * handlers) Řádek 3275	C++
 	blender.exe!wm_handlers_do(bContext * C, wmEvent * event, ListBase * handlers) Řádek 3325	C++
 	blender.exe!wm_event_do_handlers(bContext * C) Řádek 3916	C++
 	blender.exe!WM_main(bContext * C) Řádek 643	C
 	blender.exe!main(int argc, const unsigned char * * UNUSED_argv_c) Řádek 557	C

CC @mano-wii

Can confirm, crashed on NULL dereference - `td->loc` in `applyFaceNearest()`. ``` > blender.exe!copy_v3_v3(float * r, const float * a) Řádek 44 C blender.exe!applyFaceNearest(TransInfo * t, TransDataContainer * tc, TransData * td) Řádek 445 C blender.exe!applySnappingIndividual(TransInfo * t) Řádek 514 C blender.exe!recalcData_edit_armature(TransInfo * t) Řádek 1198 C blender.exe!recalcData(TransInfo * t) Řádek 1395 C blender.exe!applyBoneRoll(TransInfo * t, const int * UNUSED_mval) Řádek 72 C blender.exe!transformApply(bContext * C, TransInfo * t) Řádek 1992 C blender.exe!transform_modal(bContext * C, wmOperator * op, const wmEvent * event) Řádek 434 C blender.exe!wm_handler_operator_call(bContext * C, ListBase * handlers, wmEventHandler * handler_base, wmEvent * event, PointerRNA * properties, const char * kmi_idname) Řádek 2372 C++ blender.exe!wm_handlers_do_intern(bContext * C, wmWindow * win, wmEvent * event, ListBase * handlers) Řádek 3275 C++ blender.exe!wm_handlers_do(bContext * C, wmEvent * event, ListBase * handlers) Řádek 3325 C++ blender.exe!wm_event_do_handlers(bContext * C) Řádek 3916 C++ blender.exe!WM_main(bContext * C) Řádek 643 C blender.exe!main(int argc, const unsigned char * * UNUSED_argv_c) Řádek 557 C ``` CC @mano-wii

Added subscribers: @gfxcoder, @lichtwerk

Added subscribers: @gfxcoder, @lichtwerk

Caused by 011327224e

CC @gfxcoder

@iss : if this is a crash regression, this deserves High priority (and a bisect if possible)
@mano-wii : fix should also be added to #100749 (Blender LTS: Maintenance Task 3.3)

Caused by 011327224e CC @gfxcoder @iss : if this is a crash regression, this deserves High priority (and a bisect if possible) @mano-wii : fix should also be added to #100749 (Blender LTS: Maintenance Task 3.3)
Philipp Oeser changed title from Blender Crashes When snap roll a bone in armature to Regression: Blender Crashes When snap roll a bone in armature 2022-09-14 09:37:29 +07:00

This issue was referenced by 52f7d4bbab

This issue was referenced by 52f7d4bbab518882c1bfa519b2884ec2309c0a25

This issue was referenced by 4b326d5a78

This issue was referenced by 4b326d5a78b63aae7e5a788ef489aa95315456dd

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Germano Cavalcante self-assigned this 2022-09-16 14:16:27 +07:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
Eevee & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest/Import
Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest: Wayland
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Eevee & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#101040
There is no content yet.