Fix T101040: Blender Crashes When snap roll a bone in armature

The modes that don't support individual projection shouldn't support
FACE_NEAREST either.

Differential Revision: https://developer.blender.org/D15970